minor changes, update resume

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/ac_vr.jpg" />
-                                <span class="card-title">Assassin's Creed for VR</span>
+                                <span class="card-title">Assassin's Creed VR</span>
                             </div>
                             <div class="card-content white-text">
                                 <p>
@@ -142,6 +142,7 @@
                                     <li>- Scripting and implementation of cinematics and cutscenes</li>
                                     <li>- Creating scripted events</li>
                                     <li>- Setting up landscape cameras in multiple levels</li>
+                                    <li>- Recording shots for all the sand visions in the game</li>
                                 </ul>
                                 </p>
                             </div>
@@ -190,8 +191,7 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    Level Designer/Game Designer on Lost and Found, an Action/Adventure game being
-                                    developed using Unreal Engine 5, about a girl named Faith who makes her way into the
+                                    Level Designer/Game Designer on Lost and Found, an Action/Adventure game I pitched and am developing using Unreal Engine 5, about a girl named Faith who makes her way into the
                                     depths of Egypt to rescue her missing brother.
                                 </p>
                             </div>
@@ -642,7 +642,8 @@
                                                 Level Designer at <a href="https://india.ubisoft.com" target="_blank"
                                                     style="text-decoration: none;">Ubisoft India</a>
                                                 <ul>
-                                                    <li>- Working on Assassin's Creed for VR</li>
+                                                    <li>- Currently working on an Unannounced Project</li>
+                                                    <li>- Worked on Assassin's Creed VR</li>
                                                 </ul>
                                                 <br>
                                             </li>
