--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment,
+                                    Worked as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment,
                                     Ubisoft Düsseldorf, and Ubisoft Reflections.
                                     <br>Project currently in development.
                                 </p>
